# ChangeLog for media-sound/grip
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/media-sound/grip/ChangeLog,v 1.5 2002/04/19 18:35:38 seemant Exp $

*grip-3.0.0 (19 Apr 2002)

  19 Apr 2002; Seemant Kulleen <seemant@gentoo.org> grip-3.0.0.ebuild :

  Version bump to newest stable

*grip-2.98.6-r1 (12 Apr 2002)

  12 Apr 2002; Seemant Kulleen <seemant@gentoo.org> grip-2.98.6-r1.ebuild :

  Changed ogg flag to oggvorbis instead.

*grip-2.98.6 (11 Feb 2002)

  11 Feb 2002; Bruce A. Locke <blocke@shivan.org> ChangeLog:

  Grip 2.98.6 with added optional ogg dependency

*grip-2.98.5 (1 Feb 2002)
  
  1 Feb 2002; T.Neidt <tod@gentoo.org> ChangeLog :

  New version released to fix nasty bug in 2.98.3 that caused grip to crash
  after ripping the last track of a cd.  No changes to the ebuild, just a 
  copy of grip-2.98.3-r1.ebuild to grip-2.98.5.ebuild. =media-sound/grip-2.98.3
  has been package masked.
  
*grip-2.98.3-r1 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.